--- a/UpstraUIKit/UpstraUIKit/Modules/Comunity/Community Profile/ViewController/Child/AmityCommunityProfileHeaderViewController.xib
+++ b/UpstraUIKit/UpstraUIKit/Modules/Comunity/Community Profile/ViewController/Child/AmityCommunityProfileHeaderViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,17 +14,25 @@
                 <outlet property="actionButton" destination="kRZ-w2-ean" id="qNy-Gw-ffI"/>
                 <outlet property="actionStackView" destination="Oel-tV-vJX" id="sED-r4-x0g"/>
                 <outlet property="avatarView" destination="9xv-ae-5a2" id="ACs-lS-FWS"/>
+                <outlet property="buttonContainerView" destination="kpS-FP-DOn" id="t3G-Vz-unI"/>
                 <outlet property="categoryLabel" destination="Pdi-Fo-9vJ" id="03i-Ft-T2h"/>
+                <outlet property="descriptionBackgroundView" destination="H5r-0D-0VA" id="1FB-zB-9Qs"/>
+                <outlet property="descriptionContainerView" destination="H5r-0D-0VA" id="ZAg-eZ-Da4"/>
                 <outlet property="descriptionLabel" destination="afn-1i-qkt" id="TIr-xd-ZS3"/>
                 <outlet property="displayNameLabel" destination="xyE-Zr-AJm" id="IN0-ae-COg"/>
+                <outlet property="headerStackView" destination="HXi-Sa-ehB" id="fbq-6L-eFl"/>
+                <outlet property="infoContainerView" destination="55k-fS-16y" id="25i-Nc-yY4"/>
                 <outlet property="memberLabel" destination="JE8-UH-jlx" id="EZ9-Q9-5yn"/>
+                <outlet property="memberView" destination="9yB-jw-vAR" id="xGb-TL-CdB"/>
                 <outlet property="officialBadgeImageView" destination="4dq-0f-PXT" id="soS-d0-7aT"/>
                 <outlet property="pendingPostsContainerView" destination="xYH-Fg-KT5" id="u4L-N2-pNz"/>
                 <outlet property="pendingPostsDescriptionLabel" destination="CqM-zo-2SB" id="1MX-M4-hFx"/>
                 <outlet property="pendingPostsStatusView" destination="DGH-bO-PzS" id="CIB-e2-eHP"/>
                 <outlet property="pendingPostsTitleLabel" destination="dhe-u8-8Do" id="wp9-oQ-9Nb"/>
                 <outlet property="postLabel" destination="SjZ-Qf-dMM" id="8QB-SV-BJz"/>
+                <outlet property="postView" destination="cBh-PE-bbC" id="YfM-WR-EOD"/>
                 <outlet property="privateBadgeImageView" destination="8Zv-hm-eJJ" id="N5O-3z-VU1"/>
+                <outlet property="profileHeaderContainerView" destination="nZ9-4D-T3C" id="Cet-a4-cnh"/>
                 <outlet property="separatorView" destination="Rha-mK-enG" id="wI8-yH-Lcr"/>
                 <outlet property="storyTabView" destination="xJg-hs-s2U" id="bH7-fU-Rzn"/>
                 <outlet property="view" destination="nZ9-4D-T3C" id="Lym-1P-s5h"/>
@@ -32,11 +40,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="nZ9-4D-T3C">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="1153"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="HXi-Sa-ehB">
-                    <rect key="frame" x="0.0" y="48" width="414" height="684"/>
+                    <rect key="frame" x="0.0" y="48" width="414" height="1063"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vzm-YV-HXL" userLabel="Avatar Container View">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="276"/>
@@ -171,10 +179,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H5r-0D-0VA" userLabel="Container View">
-                            <rect key="frame" x="0.0" y="340" width="414" height="344"/>
+                            <rect key="frame" x="0.0" y="340" width="414" height="723"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="FAE-TS-apw">
-                                    <rect key="frame" x="16" y="0.0" width="382" height="344"/>
+                                    <rect key="frame" x="16" y="0.0" width="382" height="723"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="afn-1i-qkt" userLabel="Description Label">
                                             <rect key="frame" x="0.0" y="0.0" width="382" height="0.0"/>
@@ -206,16 +214,16 @@
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xYH-Fg-KT5" userLabel="Pending Posts View">
-                                            <rect key="frame" x="0.0" y="64" width="382" height="280"/>
+                                            <rect key="frame" x="0.0" y="64" width="382" height="659"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="V8d-vK-TXJ">
-                                                    <rect key="frame" x="16" y="16" width="350" height="248"/>
+                                                    <rect key="frame" x="16" y="16" width="350" height="627"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="lML-9j-XCP">
-                                                            <rect key="frame" x="114" y="0.0" width="122.5" height="223.5"/>
+                                                            <rect key="frame" x="114" y="0.0" width="122.5" height="602.5"/>
                                                             <subviews>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DGH-bO-PzS">
-                                                                    <rect key="frame" x="0.0" y="109" width="6" height="6"/>
+                                                                    <rect key="frame" x="0.0" y="298.5" width="6" height="6"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" constant="6" id="MX9-na-7mw"/>
@@ -223,7 +231,7 @@
                                                                     </constraints>
                                                                 </view>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pending posts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhe-u8-8Do">
-                                                                    <rect key="frame" x="14" y="101.5" width="108.5" height="20.5"/>
+                                                                    <rect key="frame" x="14" y="291" width="108.5" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -231,7 +239,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 posts need approval" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CqM-zo-2SB">
-                                                            <rect key="frame" x="91" y="227.5" width="168.5" height="20.5"/>
+                                                            <rect key="frame" x="91" y="606.5" width="168.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -239,7 +247,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vqN-oa-qrf">
-                                                    <rect key="frame" x="0.0" y="0.0" width="382" height="280"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="382" height="659"/>
                                                     <connections>
                                                         <action selector="pendingPostsTap" destination="-1" eventType="touchUpInside" id="LXv-6C-gzg"/>
                                                     </connections>
@@ -258,7 +266,7 @@
                                             </constraints>
                                         </view>
                                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xJg-hs-s2U">
-                                            <rect key="frame" x="0.0" y="344" width="382" height="95"/>
+                                            <rect key="frame" x="0.0" y="723" width="382" height="95"/>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="95" id="FIp-0F-9J4"/>
@@ -287,7 +295,7 @@
                 <constraint firstItem="Sb3-v2-hvg" firstAttribute="bottom" secondItem="HXi-Sa-ehB" secondAttribute="bottom" constant="8" id="znR-AA-Nki"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="985.50724637681162" y="170.08928571428569"/>
+            <point key="canvasLocation" x="985.50724637681162" y="296.31696428571428"/>
         </view>
     </objects>
     <resources>
@@ -295,7 +303,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGrayColor">
-            <color red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
