--- a/UpstraUIKit/UpstraUIKit/Modules/Comunity/Feed Posts/Contents/Cells/Footer/AmityPostFooterTableViewCell.xib
+++ b/UpstraUIKit/UpstraUIKit/Modules/Comunity/Feed Posts/Contents/Cells/Footer/AmityPostFooterTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,10 +18,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ldZ-XR-Qlt">
-                        <rect key="frame" x="0.0" y="8" width="320" height="90"/>
+                        <rect key="frame" x="0.0" y="8" width="320" height="89"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="old-kk-mfA">
-                                <rect key="frame" x="16" y="0.0" width="288" height="81"/>
+                                <rect key="frame" x="16" y="0.0" width="288" height="80.666666666666671"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MWG-0g-I4O" userLabel="Top Container View">
                                         <rect key="frame" x="0.0" y="0.0" width="288" height="32"/>
@@ -30,30 +30,30 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="288" height="32"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_like_button" translatesAutoresizingMaskIntoConstraints="NO" id="idT-is-pHk">
-                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="32"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="50"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="20" id="OBJ-gn-5ls"/>
                                                             <constraint firstAttribute="height" constant="20" id="taG-eq-4Ip"/>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="1.8k likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9dt-rK-9df">
-                                                        <rect key="frame" x="28" y="0.0" width="68.666666666666671" height="32"/>
+                                                        <rect key="frame" x="28" y="0.0" width="68.666666666666671" height="50"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CFU-9Q-Yvz">
-                                                        <rect key="frame" x="104.66666666666667" y="0.0" width="16" height="32"/>
+                                                        <rect key="frame" x="104.66666666666667" y="0.0" width="16" height="50"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="5 comments" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n1w-J0-PS0">
-                                                        <rect key="frame" x="128.66666666666666" y="0.0" width="94.666666666666657" height="32"/>
+                                                        <rect key="frame" x="128.66666666666666" y="0.0" width="94.666666666666657" height="50"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="5 share" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQB-8p-SU5">
-                                                        <rect key="frame" x="231.33333333333334" y="0.0" width="56.666666666666657" height="32"/>
+                                                        <rect key="frame" x="231.33333333333334" y="0.0" width="56.666666666666657" height="50"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -94,26 +94,26 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyE-RO-6VW" userLabel="Separator View">
-                                        <rect key="frame" x="0.0" y="40" width="288" height="1"/>
+                                        <rect key="frame" x="0.0" y="40" width="288" height="0.6666666666666643"/>
                                         <color key="backgroundColor" red="0.89019607840000003" green="0.89411764709999997" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="1" id="2Ce-q6-7B3"/>
+                                            <constraint firstAttribute="height" constant="0.5" id="2Ce-q6-7B3"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NZQ-e8-53o" userLabel="Bottom Container View">
-                                        <rect key="frame" x="0.0" y="49" width="288" height="32"/>
+                                        <rect key="frame" x="0.0" y="48.666666666666657" width="288" height="32"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="LY1-GA-XD2">
-                                                <rect key="frame" x="0.0" y="0.0" width="201" height="32"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="140" height="32"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kp8-xl-VFI">
-                                                        <rect key="frame" x="0.0" y="0.0" width="201" height="16"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="140" height="16"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Ihv-Qg-TsU">
-                                                        <rect key="frame" x="0.0" y="16" width="201" height="16"/>
+                                                        <rect key="frame" x="0.0" y="16.000000000000007" width="140" height="16"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHB-Qg-NR1" customClass="AmityButton" customModule="AmityUIKit" customModuleProvider="target">
                                                                 <rect key="frame" x="0.0" y="0.0" width="53" height="16"/>
@@ -137,8 +137,8 @@
                                                                     <action selector="commentTap" destination="KGk-i7-Jjw" eventType="touchUpInside" id="4Ub-YQ-oS0"/>
                                                                 </connections>
                                                             </button>
-                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lYA-ML-TDz" customClass="AmityButton" customModule="AmityUIKit" customModuleProvider="target">
-                                                                <rect key="frame" x="152" y="0.0" width="49" height="16"/>
+                                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lYA-ML-TDz" customClass="AmityButton" customModule="AmityUIKit" customModuleProvider="target">
+                                                                <rect key="frame" x="140" y="0.0" width="0.0" height="16"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                 <color key="tintColor" red="0.50588235290000005" green="0.52549019610000003" blue="0.59607843140000005" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <state key="normal" title="Share" image="icon_share">
@@ -169,10 +169,10 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9ua-2n-eX2" userLabel="Separator View">
-                                <rect key="frame" x="0.0" y="89" width="320" height="1"/>
+                                <rect key="frame" x="0.0" y="88.666666666666671" width="320" height="0.3333333333333286"/>
                                 <color key="backgroundColor" red="0.89019607840000003" green="0.89411764709999997" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="dzi-jV-RRO"/>
+                                    <constraint firstAttribute="height" constant="0.5" id="dzi-jV-RRO"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -194,6 +194,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="actionStackView" destination="Ihv-Qg-TsU" id="zWS-nc-jA4"/>
+                <outlet property="bottomSeparator" destination="9ua-2n-eX2" id="QIw-4W-GbA"/>
                 <outlet property="commentButton" destination="7rf-c3-yY7" id="hbE-X6-MY3"/>
                 <outlet property="commentLabel" destination="n1w-J0-PS0" id="jkG-JV-Djp"/>
                 <outlet property="likeButton" destination="dHB-Qg-NR1" id="MZi-Ve-Np1"/>
@@ -203,6 +204,7 @@
                 <outlet property="shareButton" destination="lYA-ML-TDz" id="18S-lS-94N"/>
                 <outlet property="shareLabel" destination="iQB-8p-SU5" id="crm-Zw-eKG"/>
                 <outlet property="topContainerView" destination="MWG-0g-I4O" id="ekK-Cy-Zg9"/>
+                <outlet property="topSeparator" destination="wyE-RO-6VW" id="QlV-p6-EcW"/>
                 <outlet property="warningLabel" destination="Kp8-xl-VFI" id="EaO-0D-9GC"/>
                 <outletCollection property="separatorView" destination="9ua-2n-eX2" collectionClass="NSMutableArray" id="aq6-7c-k6g"/>
                 <outletCollection property="separatorView" destination="wyE-RO-6VW" collectionClass="NSMutableArray" id="6kK-7R-szd"/>
