theme changes for dark theme

--- a/UpstraUIKit/UpstraUIKit/Modules/Comunity/Feed Posts/Contents/Cells/Gallery/AmityPostGalleryTableViewCell.xib
+++ b/UpstraUIKit/UpstraUIKit/Modules/Comunity/Feed Posts/Contents/Cells/Gallery/AmityPostGalleryTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -61,6 +61,7 @@
             <connections>
                 <outlet property="contentLabel" destination="eyL-5W-3ZS" id="O7d-Hx-Ies"/>
                 <outlet property="galleryCollectionView" destination="VmY-c6-Uv2" id="lFT-Ea-367"/>
+                <outlet property="galleryContentView" destination="H2p-sc-9uM" id="3A9-zS-4Pp"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="168.08035714285714"/>
         </tableViewCell>
